--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<!-- Header -->
 			<header id="header">
 				<h1>No Caps</h1>
-				<h2>NFTS Collection</h2>
+				<h2>NFTs Collection</h2>
 				<p>Soon...</p>
 				<nav>
 					<ul>
