--- a/index.html
+++ b/index.html
@@ -18,18 +18,25 @@
 			<!-- Header -->
 			<header id="header">
 				<h1>No Caps</h1>
-				<h2>NFTs Collection</h2>
+				<h2>NFTs Collection ・ 1000 CryptoCap</h2>
 				<p>Soon...</p>
 				<nav>
 					<ul>
 						<li><a href="https://twitter.com/nocaps_official" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://discord.gg/7uGRF9JG4B" target="_blank"class="icon brands fa-discord"><span class="label">Discord</span></a></li>
+						<li><a href="https://discord.gg/2T6VgZqKUa" target="_blank"class="icon brands fa-discord"><span class="label">Discord</span></a></li>
 						<li><a href="https://instagram.com/_no_caps_" target="_blank"class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://www.tiktok.com/@nocaps_official" target="_blank" class="icon brands fa-tiktok"><span class="label">Tiktok</span></a></li>
 						<li><a href="mailto:nocapscontact@gmail.com" target="_blank"class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</nav>
 			</header>
+
+			<!-- Footer -->
+				<footer id="footer">
+					<span class="copyright">Founder ・ <a href="https://www.instagram.com/paul.cdm/">@paul.cdm</a></span>
+				</footer>
+
+
 		</div>
 	</div>
 	<script>
